--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
+  "homepage": "https://thongmnguyen.github.io/crud-react-hooks",
   "name": "react-crud",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
